--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "main": "index.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "rebuild": ".\\node_modules\\.bin\\electron-rebuild.cmd -f -m ./node_modules/better-sqlite3",
+    "postinstall": "electron-builder install-app-deps"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@electron/rebuild": "^4.0.1",
     "electron": "^36.5.0",
     "electron-reload": "^2.0.0-alpha.1"
   },
   "dependencies": {
     "app-root-path": "^3.1.0",
+    "better-sqlite3": "^11.10.0",
     "bootstrap": "^5.3.7",
-    "jquery": "^3.7.1"
+    "jquery": "^3.7.1",
+    "sharp": "^0.34.2",
+    "sqlite3": "^5.1.7"
   }
 }
