--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "app-root-path": "^3.1.0",
     "better-sqlite3": "^11.10.0",
     "bootstrap": "^5.3.7",
+    "canvas": "^3.1.1",
+    "electron-pdf-window": "^1.0.12",
     "jquery": "^3.7.1",
+    "jsbarcode": "^3.12.1",
+    "pdfkit": "^0.17.1",
     "sharp": "^0.34.2",
     "sqlite3": "^5.1.7"
   }
