--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "navigationdemo",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./index.js",
   "scripts": {
-    "start": "electron .",
+    "start": "electron ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "rebuild": ".\\node_modules\\.bin\\electron-rebuild.cmd -f -m ./node_modules/better-sqlite3",
-    "postinstall": "electron-builder install-app-deps"
+    "postinstall": "electron-builder install-app-deps",
+    "dist": "electron-builder",
+    "dist:dir": "electron-builder --dir",
+    "build:win": "npm run build && electron-builder --win",
+    "build:mac": "npm run build && electron-builder --mac",
+    "build:linux": "npm run build && electron-builder --linux"    
+
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +20,9 @@
   "devDependencies": {
     "@electron/rebuild": "^4.0.1",
     "electron": "^36.5.0",
-    "electron-reload": "^2.0.0-alpha.1"
+    "electron-builder": "^26.0.12",
+    "electron-reload": "^2.0.0-alpha.1",
+    "electron-webpack": "^2.8.2"
   },
   "dependencies": {
     "app-root-path": "^3.1.0",
